crates/gldf-rs-ffi/generated/gldf_ffiFFI.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V4 in this file.           ⚠️

typedef struct RustBuffer
{
    uint64_t capacity;
    uint64_t len;
    uint8_t *_Nullable data;
} RustBuffer;
// Error definitions
typedef struct RustCallStatus {
    int8_t code;
    RustBuffer errorBuf;
} RustCallStatus;
typedef void (*UniffiRustFutureContinuationCallback)(uint64_t, int8_t
    );
typedef void (*UniffiForeignFutureFree)(uint64_t
    );
typedef void (*UniffiCallbackInterfaceFree)(uint64_t
    );
typedef struct UniffiForeignFuture {
    uint64_t handle;
    UniffiForeignFutureFree _Nonnull free;
} UniffiForeignFuture;
typedef struct UniffiForeignFutureStructU8 {
    uint8_t returnValue;
    RustCallStatus callStatus;
} UniffiForeignFutureStructU8;
typedef void (*UniffiForeignFutureCompleteU8)(uint64_t, UniffiForeignFutureStructU8
    );
typedef struct UniffiForeignFutureStructI8 {
    int8_t returnValue;
    RustCallStatus callStatus;
} UniffiForeignFutureStructI8;
typedef void (*UniffiForeignFutureCompleteI8)(uint64_t, UniffiForeignFutureStructI8
    );
typedef struct UniffiForeignFutureStructU16 {
    uint16_t returnValue;
    RustCallStatus callStatus;
} UniffiForeignFutureStructU16;
typedef void (*UniffiForeignFutureCompleteU16)(uint64_t, UniffiForeignFutureStructU16
    );
typedef struct UniffiForeignFutureStructI16 {
    int16_t returnValue;
    RustCallStatus callStatus;
} UniffiForeignFutureStructI16;
typedef void (*UniffiForeignFutureCompleteI16)(uint64_t, UniffiForeignFutureStructI16
    );
typedef struct UniffiForeignFutureStructU32 {
    uint32_t returnValue;
    RustCallStatus callStatus;
} UniffiForeignFutureStructU32;
typedef void (*UniffiForeignFutureCompleteU32)(uint64_t, UniffiForeignFutureStructU32
    );
typedef struct UniffiForeignFutureStructI32 {
    int32_t returnValue;
    RustCallStatus callStatus;
} UniffiForeignFutureStructI32;
typedef void (*UniffiForeignFutureCompleteI32)(uint64_t, UniffiForeignFutureStructI32
    );
typedef struct UniffiForeignFutureStructU64 {
    uint64_t returnValue;
    RustCallStatus callStatus;
} UniffiForeignFutureStructU64;
typedef void (*UniffiForeignFutureCompleteU64)(uint64_t, UniffiForeignFutureStructU64
    );
typedef struct UniffiForeignFutureStructI64 {
    int64_t returnValue;
    RustCallStatus callStatus;
} UniffiForeignFutureStructI64;
typedef void (*UniffiForeignFutureCompleteI64)(uint64_t, UniffiForeignFutureStructI64
    );
typedef struct UniffiForeignFutureStructF32 {
    float returnValue;
    RustCallStatus callStatus;
} UniffiForeignFutureStructF32;
typedef void (*UniffiForeignFutureCompleteF32)(uint64_t, UniffiForeignFutureStructF32
    );
typedef struct UniffiForeignFutureStructF64 {
    double returnValue;
    RustCallStatus callStatus;
} UniffiForeignFutureStructF64;
typedef void (*UniffiForeignFutureCompleteF64)(uint64_t, UniffiForeignFutureStructF64
    );
typedef struct UniffiForeignFutureStructPointer {
    void*_Nonnull returnValue;
    RustCallStatus callStatus;
} UniffiForeignFutureStructPointer;
typedef void (*UniffiForeignFutureCompletePointer)(uint64_t, UniffiForeignFutureStructPointer
    );
typedef struct UniffiForeignFutureStructRustBuffer {
    RustBuffer returnValue;
    RustCallStatus callStatus;
} UniffiForeignFutureStructRustBuffer;
typedef void (*UniffiForeignFutureCompleteRustBuffer)(uint64_t, UniffiForeignFutureStructRustBuffer
    );
typedef struct UniffiForeignFutureStructVoid {
    RustCallStatus callStatus;
} UniffiForeignFutureStructVoid;
typedef void (*UniffiForeignFutureCompleteVoid)(uint64_t, UniffiForeignFutureStructVoid
    );
void*_Nonnull uniffi_gldf_ffi_fn_clone_gldfengine(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void uniffi_gldf_ffi_fn_free_gldfengine(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_gldf_ffi_fn_constructor_gldfengine_from_bytes(RustBuffer data, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_gldf_ffi_fn_constructor_gldfengine_from_json(RustBuffer json, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_gldf_ffi_fn_constructor_gldfengine_new_empty(RustCallStatus *_Nonnull out_status
    
);
void uniffi_gldf_ffi_fn_method_gldfengine_add_application(void*_Nonnull ptr, RustBuffer application, RustCallStatus *_Nonnull out_status
);
void uniffi_gldf_ffi_fn_method_gldfengine_add_file(void*_Nonnull ptr, RustBuffer id, RustBuffer file_name, RustBuffer content_type, RustBuffer file_type, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_gldf_ffi_fn_method_gldfengine_export_to_ifc(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_gldf_ffi_fn_method_gldfengine_get_applications(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_gldf_ffi_fn_method_gldfengine_get_archive_file(void*_Nonnull ptr, RustBuffer path, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_gldf_ffi_fn_method_gldfengine_get_electrical(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_gldf_ffi_fn_method_gldfengine_get_emitter_data(void*_Nonnull ptr, RustBuffer emitter_id, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_gldf_ffi_fn_method_gldfengine_get_file_content(void*_Nonnull ptr, RustBuffer file_id, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_gldf_ffi_fn_method_gldfengine_get_file_content_as_string(void*_Nonnull ptr, RustBuffer file_id, RustCallStatus *_Nonnull out_status
);